--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <d class="container">
         <div id="path">
-          <h1> Visit Pathway</h1>
+          <h1> Visit Pathway swetha</h1>
           <p>Enjoy the view to relax a way and the sky is look like Awesome</p>
         
 
